<resources>
    <string name="app_name">Google India Scholarships</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_header_title">Google India Scholarships</string>
    <string name="course_title_android_dev_basic">Android Development Basic</string>
    <string name="course_title_android_dev_intermediate">Android Development Intermediate</string>
    <string name="course_title_web_dev_basic">Web Development Basic</string>
    <string name="course_title_web_dev_intermediate">Web Development Intermediate</string>
    <string name="NA">NA</string>

    <string-array name="array_course_titles">
        <item>@string/course_title_android_dev_basic</item>
        <item>@string/course_title_android_dev_intermediate</item>
        <item>@string/course_title_web_dev_basic</item>
        <item>@string/course_title_web_dev_intermediate</item>
    </string-array>

    <string-array name="array_course_abb">
        <item>AB</item>
        <item>AI</item>
        <item>WB</item>
        <item>WI</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="gis_2k18_logo">GIS 2k18 LOGO</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="gis_2018">GIS 2018</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_here">Reset here.</string>

    <string name="featured_story_sample_description">"25 Android libraries you definitely want to try out in early 2017"</string>
    <string name="profile_gis_story_sample_description">"The journey of wanderer turned an Android Developer"</string>

    <string name="profile_short_description_sample">"Hi! My name is Vineeth Reddy, I’m a passionate Android developer and I enjoy creating apps that create an impact in the world. Contact me at vineethreddy@gmail.com"</string>

    <string name="profile_skills_sample">XML , ANDROID , FIREBASE , UI , ADOBE </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_url">https://github.com/knightcube</string>

    <string name="firebase_url">https://gis-2k18.firebaseio.com</string>
    <string name="title_activity_project_details">ProjectDetails</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_create_project">CreateProjectActivity</string>
    <string name="title_activity_share_link">ShareLinkActivity</string>
    <string name="default_description">Sample Description</string>

    <string name="project_github_url">Project Github Url</string>
    <string name="project_name">Project Name</string>
    <string name="project_logo_url">Project Logo Url</string>
    <string name="project_description">Project Description</string>
    <string name="title_activity_challenges_details">ChallengesDetails</string>
    <string name="text_user_name">Vineeth Reddy</string>
    <string name="About">About</string>

    <!--Setting's Preference string resources-->
    <string name="pref_notification_title">Get Notifications</string>
    <string name="pref_notification_key">notifications</string>
    <string name="pref_notification_summary_on">Enabled</string>
    <string name="pref_notification_summary_off">Disabled</string>

    <string name="pref_dialog_title">Are you sure ?</string>
    <string name="pref_dialog_content">This will sign you out from device.</string>
    <string name="pref_dialog_positive_btn_text">Yes</string>
    <string name="pref_dialog_title_label">Sign Out</string>
    <string name="pref_dialog_negative_btn_text">No</string>
    <string name="pref_dialog_key">custom_sign_out_pref_dialog</string>

    <!--Home Screen resources-->
    <string name="announcement_summary">All of you have been great so far in this scholarship journey, I wish you all the best for your future endeavours. Stay Hungry, Stay Udacious!</string>
    <string name="announcement_title">Best of luck for your future</string>
    <string name="announcement_time">17 hours ago</string>
    <string name="announcement_author">Akshit Jain</string>

    <string name="quiz_announcement_summary">A short quiz on SQLite concepts to give you a quick revision of the concepts.</string>
    <string name="quiz_announcement_title">New Quiz is out!</string>
    <string name="quiz_announcement_deadline">14th May</string>
    <string name="quiz_announcement_lesson">SQLite</string>

    <string name="blog_title">Google India Challenge Scholarship: Nearing the end of a great journey</string>
    <string name="blog_author">Sudhanshu Vohra</string>

    <!--Main Activity navigation bar string resource -->
    <string name="nav_item_home">Home</string>
    <string name="nav_item_members">Members</string>
    <string name="nav_item_gis_stories">GIS Stories</string>
    <string name="nav_item_projects">Projects</string>
    <string name="nav_item_challenges">Challenges</string>
    <string name="nav_item_community">Community</string>
    <string name="nav_item_quizzes">Quizzes</string>
    <string name="nav_item_my_profile">My Profile</string>
    <string name="nav_item_settings">Settings</string>


    <!--Community Dialog Strings-->
    <string name="community_dialog_link_shared_by">Community</string>
    <string name="community_dialog_link_preview_title">Link Preview Title</string>
    <string name="community_dialog_btn_open_text">Open</string>
    <string name="community_dialog_btn_close_text">Close</string>
    <string name="search">Search</string>


</resources>
