<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_item_home"
            android:checked="true"/>

        <item
            android:id="@+id/nav_members"
            android:icon="@drawable/ic_members"
            android:title="@string/nav_item_members" />
        <item
            android:id="@+id/nav_gis_stories"
            android:icon="@drawable/ic_stories"
            android:title="@string/nav_item_gis_stories" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_projects"
            android:title="@string/nav_item_projects" />
        <item
            android:id="@+id/nav_challenges"
            android:icon="@drawable/ic_challenges"
            android:title="@string/nav_item_challenges" />

        <item
            android:id="@+id/nav_quizzes"
            android:icon="@drawable/ic_quizzes"
            android:title="@string/nav_item_quizzes" />
        <item
            android:id="@+id/nav_community"
            android:icon="@drawable/ic_community"
            android:title="@string/nav_item_community" />
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/ic_user_profile"
            android:title="@string/nav_item_my_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_item_settings" />
    </group>



</menu>
