<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView

            android:layout_margin="3dp"
            android:id="@+id/img_view_quiz_announcement_thumbnail"
            android:layout_width="280dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:background="@drawable/bg_gradient"
            android:src="@drawable/quiz_placeholder1" />

        <TextView
            android:id="@+id/tv_quiz_announcement_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asap"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/quiz_announcement_title"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_quiz_announcement_lesson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/asap"
                android:text="@string/quiz_announcement_lesson"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/asap"
                    android:ellipsize="end"
                    android:padding="3dp"
                    android:textColor="@color/darkGray"
                    android:textStyle="italic"
                    android:text="Deadline:"/>

                <TextView
                    android:id="@+id/tv_quiz_announcement_deadline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/asap"
                    android:padding="3dp"
                    android:text="@string/quiz_announcement_deadline"
                    android:textColor="@color/darkGray"
                    android:textStyle="italic" />

            </LinearLayout>




        </LinearLayout>

        <TextView
            android:id="@+id/tv_quiz_announcement_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asap"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/quiz_announcement_summary"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/ib_open_quiz"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:src="@drawable/ic_open_in_browser" />

            <ImageButton
                android:id="@+id/ib_share_quiz"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:src="@drawable/ic_share" />

            <ImageButton
                android:id="@+id/ib_bookmark_quiz"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:src="@drawable/ic_bookmark" />


        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>